# latex-updates

./: .gitignore  README.md  index.html  index_en.html  index_fr.html  latex_updates.py  pyproject.toml
demo/: demo_new.tex  demo_old.tex
latex_updates/: __init__.py  __main__.py
